Fix some css styles on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11246,3 +11246,15 @@ header.masthead .site-heading .h1 {
     font-size: 2.25rem;
   }
 }
+
+.navbar-nav span.mobile-display {
+    display: none;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav span.mobile-display {
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 12px;
+  }
+}
